--- a/zkmon-frontend/src/pages/website/index.html
+++ b/zkmon-frontend/src/pages/website/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <title>HTML5 Canvas Pokemon Game</title>
     <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
-    <script src="canvas.pokemon.js"></script>
+    <script src="./index.js"></script>
   </head>
   <body>
     <canvas id="canvas" width="460" height="460"></canvas>
